<resources>
    <string name="app_name">BIoTOP</string>
    <string name="tv_farm">Odling</string>
    <string name="tv_animal">Djur</string>

    <string name="tv_values">Värden</string>
    <string name="tv_moisture">Fukthalt</string>
    <string name="tv_temperature">Temperatur</string>
    <string name="tv_ph">pH</string>
    <string name="tv_watering_title">Bevattning</string>
    <string name="tv_watering_option">Automatisk</string>
    <string name="tv_watering_status">Status</string>
    <string name="tv_watering_status_show_off">Off</string>
    <string name="tv_watering_status_show_on">On</string>
    <string name="tv_watering_button_show_off">Starta</string>
    <string name="tv_watering_button_show_on">Avbryt</string>

    <string name="tv_position">Position</string>
    <string name="tv_list">Lista</string>
    <string name="tv_id">ID</string>
    <string name="tv_health">Hälsa</string>

    <string name="tv_animal_type">Typ</string>
    <string name="tv_animal_id">ID</string>
    <string name="tv_body_temperature">Kroppstemperatur</string>
    <string name="tv_pulse">Puls</string>
    <string name="tv_blood_pressure">Blodtryck</string>

    <string name="tv_dash">-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
