<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/values"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/tv_values"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/moisture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_moisture"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/moistureShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="@string/tv_moisture_show"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_temperature"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperatureShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="-- --"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="pH"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="-- --"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wateringTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/tv_watering_title"
        android:textColor="@color/blue"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/automatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_watering_option"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/automaticSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/wateringStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_watering_status"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wateringStatusShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="@string/tv_watering_status_show_off"
            android:textColor="@color/orange"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip">

        <Button
            android:id="@+id/waterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_watering_button_show_off"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="öka" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="minska" />


</LinearLayout>