<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/animal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_animal_type"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dash"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/animal_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_animal_id"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/body_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_body_temperature"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/body_temperature_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="@string/tv_dash"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_pulse"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pulse_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="@string/tv_dash"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_blood_pressure"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/blood_pressure_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="@string/tv_dash"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:text=" "
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/animal_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dip"
            android:text="@string/tv_watering_status"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/animal_status_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="end"
            android:padding="5dip"
            android:text="fyllihär"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>