<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.constraint.ConstraintLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".FarmActivity">-->

    <!--<FrameLayout-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigationView"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:itemBackground="@color/green"-->
        <!--app:itemIconTint="@color/greenDark"-->
        <!--app:itemTextColor="@color/black"-->
        <!--app:menu="@menu/navigation"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="200dp"-->
    <!--android:text="@string/app_name"-->
    <!--android:textColor="@color/black"-->
    <!--android:textSize="50sp" />-->

    <!--<Button-->
    <!--android:id="@+id/buttonFarm"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="360dp"-->
    <!--android:text="@string/tv_farm"-->
    <!--android:textColor="@color/greenDark"-->
    <!--android:textSize="30sp" />-->

    <!--<Button-->
    <!--android:id="@+id/buttonAnimal"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/buttonFarm"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="420dp"-->
    <!--android:text="@string/tv_animal"-->
    <!--android:textColor="@color/greenDark"-->
    <!--android:textSize="30sp" />-->

<!--</android.support.constraint.ConstraintLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground"
    tools:context=".FarmActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            app:srcCompat="@drawable/biotop_fixed" />
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="@color/green"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/green"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemTextAppearanceActive="@style/navTextActive"
        app:itemTextAppearanceInactive="@style/navTextInactive"
        app:menu="@menu/navigation"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/raleway_extra_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonFarm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:text="@string/tv_farm"
        android:textColor="@color/greenDark"
        android:textSize="30sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonAnimal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFarm"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:text="@string/tv_animal"
        android:textColor="@color/greenDark"
        android:textSize="30sp"
        android:visibility="invisible" />

</RelativeLayout>